<resources>
    <string name="app_name">Pointage</string>
    <string name="TextView">TextView</string>
    <string name="Du">Du</string>
    <string name="au">au</string>
    <string name="Masquer">Masquer</string>
    <string name="download_plans">TÉLÉCHARGER LES PLANS</string>
    <string name="pointer">Pointer</string>
    <string name="Hdeb">Hdeb</string>
    <string name="Hfin">Hfin</string>
    <string name="Type">Type</string>
    <string name="Commentaire">Commentaire</string>
    <string name="coffret_elec">Coffret</string>
    <string name="remblais">Remblais</string>
    <string name="Date">Date</string>
    <string name="slash">/</string>
    <string name="double_points">:</string>
    <string name="Valider">Valider</string>
    <string name="equipe_complete">Equipe Complete</string>
    <string name="enregistrer">enregistrer</string>
    <string name="supprimer">Supprimer</string>
    <string name="connexion">Se connecter</string>
    <string name="logout">Deconnexion</string>
    <string name="map">Aller sur Google Maps</string>
    <string name="add_marche">Ajouter un marché</string>
    <string name="add_ts">Ajouter un TS</string>
    <string name="repas">Gérer mes repas</string>
    <string name="voir_pointages">Voir mes pointages</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="speech_prompt">Que voulez-vous écrire ?</string>
    <string name="autocompleteAffaire">Veuillez saisir une affaire</string>
    <string name="retour">Retour</string>
    <string name="pointageDivers">Pointages Divers</string>
    <string name="pause">Pause</string>
    <string name="ajouterPointageDivers">Ajouter un pointage divers</string>
    <string name="termine">Terminer</string>
    <string name="zoneCommentaire">Appuyer pour parler ou écrire</string>
    <string name="spinnerBdct">Sélectionner un corps d\'état</string>
    <string name="spinnerEquipier">Sélectionner un equipier</string>
</resources>