<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:focusable="false"
    tools:context=".ui.pointagedivers.PointageDiversFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pointage_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    tools:ignore="UselessParent">

                    <Button
                        android:id="@+id/buttonJour"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/button"
                        android:text="" />

                    <Spinner
                        android:id="@+id/type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_weight="0.5"
                        android:contentDescription="@string/TextView"
                        android:text="@string/TextView" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    tools:ignore="UselessParent">

                    <Spinner
                        android:id="@+id/duree_heure"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_weight="0.5"
                        android:contentDescription="@string/TextView"
                        android:text="@string/TextView" />


                    <Spinner
                        android:id="@+id/duree_minute"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_weight="0.5"
                        android:contentDescription="@string/TextView"
                        android:text="@string/TextView" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    tools:ignore="UselessParent">

                    <CheckBox
                        android:id="@+id/equipe"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_weight="0.5"
                        android:checked="true"
                        android:text="@string/equipe_complete" />

                    <Spinner
                        android:id="@+id/equipiers"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_weight="0.5"
                        android:prompt="@string/spinnerEquipier"
                        tools:visibility="gone" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    tools:ignore="UselessParent">

                    <EditText
                        android:id="@+id/commentaire"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="@android:drawable/editbox_background"
                        android:drawableEnd="@android:drawable/ic_btn_speak_now"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"
                        android:text=""
                        android:hint="@string/zoneCommentaire"
                        android:textColorHint="@color/black"
                        tools:ignore="LabelFor" />

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/ajouterPointageDivers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:background="@color/aubergine"
                android:textColor="@color/white"
                android:text="@string/ajouterPointageDivers"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/table"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/ajouterPointageDivers" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pointages_divers_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ajouterPointageDivers" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>