<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp"
    android:background="@drawable/border"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pointage_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/buttonJour"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/button"
                    android:text="" />

                <Spinner
                    android:id="@+id/type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/TextView"
                    android:text="@string/TextView" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                tools:ignore="UselessParent">

                <Spinner
                    android:id="@+id/duree_heure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/TextView"
                    android:text="@string/TextView" />


                <Spinner
                    android:id="@+id/duree_minute"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/TextView"
                    android:text="@string/TextView" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/equipier"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:padding="10dp"
                    android:text="@string/TextView"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/commentaire"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@android:drawable/editbox_background"
                    android:drawableEnd="@android:drawable/ic_btn_speak_now"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:text=""
                    tools:ignore="LabelFor" />

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/pointageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enregistrer"
            android:background="@color/aubergine"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table"/>

        <Button
            android:id="@+id/supprimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supprimer"
            android:background="@color/red"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>